refactoring the model...;

--- a/addon/templates/components/group-display.hbs
+++ b/addon/templates/components/group-display.hbs
@@ -122,4 +122,5 @@ text='manage authorizations'
 action='manageAuthorizations'
 class='indigo secondary-content'
 }}
+<button {{action "manageAuthorizationsGroup" group}}>manage authorizations</button>
 
