--- a/addon/templates/components/user-display.hbs
+++ b/addon/templates/components/user-display.hbs
@@ -62,4 +62,4 @@ class='indigo secondary-content'
 actionArg=user
 }}
 
-
+<button {{action "manageAuthorizationsUser" user}}>manage authorizations</button>
