fixed template display

--- a/addon/templates/components/authorizations-list.hbs
+++ b/addon/templates/components/authorizations-list.hbs
@@ -6,7 +6,7 @@
 {{#each addableGrantCollections as |coll|}}
 <div style="width:49%;display:inline-block;min-height:50px;border:1px solid black;">
 <div style="width:100%">
-<h7>current {{coll.token.name}} authorizations</h7>
+<h7>current {{coll.token.title}} authorizations</h7>
 <p>
 <table>
 {{#each coll.members as |member|}}
